--- a/src/code/assets/color/success.css
+++ b/src/code/assets/color/success.css
@@ -1,18 +1,18 @@
 
 a {
-	color: #7cbb00;
+	color: white;
 }
 
 a:hover {
-	color:#77b201;
+	color: white;
 }
 
 .btn-link:hover {
-  color: #77b201;
+  color: #29b6d2;
 }
 
 .color {
-	background: #7cbb00;
+	background: #29b6d2;
 	color:#fff;
 }
 
@@ -32,7 +32,7 @@ input[type="search"]:focus,
 input[type="tel"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus {
-  border-color: #7cbb00;
+  border-color: #29b6d2;
   outline: 0;
   outline: thin dotted \9;
   /* IE6-9 */
@@ -44,84 +44,84 @@ input[type="color"]:focus,
 
 header .navbar .navbar-inner li.active {
 	border-top: 5px solid #fff;
-	background: #7cbb00;
+	background: #29b6d2;
 	margin-top:-5px;
 }
 
 header .navbar .navbar-inner nav li.blob  {
-	border-top: 5px solid #7cbb00;
+	border-top: 5px solid #29b6d2;
 	margin-top:-5px;
 }
 
 .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
 .dropdown-submenu:hover > a {
-  background: #7cbb00;
+  background: #29b6d2;
 }
 
 .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
 .dropdown-submenu:hover > a {
-  background-color: #7cbb00;
+  background-color: #29b6d2;
 }
 
 .dropdown-menu .active > a,
 .dropdown-menu .active > a:hover {
-  background-color: #7cbb00;
+  background-color: #29b6d2;
 }
 
 /* breadcrumb */
 .breadcrumb {
-	border-left:5px solid #7cbb00;
+	border-left:5px solid #29b6d2;
 }
 
 
 /* accordion */
 .accordion-group {
-  border: 1px solid #7cbb00;
+  border: 1px solid #29b6d2;
 }
 .accordion-inner {
-  border-top: 1px solid #7cbb00;
+  border-top: 1px solid #29b6d2;
 }
 .accordion-heading {
-  background-color: #7cbb00;
+  background-color: #29b6d2;
 }
 
 /* flexslider */
 .flex-direction-nav li a:hover {
-	background:#7cbb00;
+	background:#29b6d2;
 	
 }
 
 /* carousel */
 .carousel-control {
-  background: #7cbb00;
+  background: #29b6d2;
 }
 
 
 /* eislide */
 .es-nav .es-nav-prev{
     right: 17px;
-    background:#7cbb00 url(../img/icons/arrow-left.png) no-repeat right top;
+    background:#29b6d2 url(../img/icons/arrow-left.png) no-repeat right top;
 }
-.es-nav .es-nav-next{background: #7cbb00 url(../img/icons/arrow-right.png) no-repeat left top;}
+.es-nav .es-nav-next{background: #29b6d2 url(../img/icons/arrow-right.png) no-repeat left top;}
 
 /* button */
 .btn-link {
-	color: #7cbb00;
+	color: #29b6d2;
 }
 
 .nav .dropdown-toggle .caret {
   margin-top: 6px;
-  border-top-color: #7cbb00;
-  border-bottom-color: #7cbb00;
+  border-top-color: #29b6d2;
+  border-bottom-color: #29b6d2;
 }
 
 /* pagination */
 .pagination ul > li > a,
 .pagination ul > li > span {
-  background-color: #7cbb00;
-  border: 1px solid #7cbb00;
+  background-color: #29b6d2;
+  border: 1px solid #29b6d2;
   color:#fff;
   border-left-width: 0;
 }
@@ -131,13 +131,13 @@ header .navbar .navbar-inner nav li.blob  {
 .nav-pills > .active > a,
 .nav-pills > .active > a:hover {
   color: #ffffff;
-  background-color: #7cbb00;
+  background-color: #29b6d2;
 }
 
 
 .nav-tabs > .active > a,
 .nav-tabs > .active > a:hover {
-  background-color: #7cbb00;
+  background-color: #29b6d2;
   color:#fff;
   border: none;
   border-bottom-color: transparent;
@@ -147,70 +147,70 @@ header .navbar .navbar-inner nav li.blob  {
 /* label */
 .label-orange,
 .badge-orange {
-  background-color: #7cbb00;
+  background-color: #29b6d2;
 }
 
 
 /* nav */
 .nav-list > .active > a,
 .nav-list > .active > a:hover {
-  background: #7cbb00;
+  background: #29b6d2;
 }
 
 
 .nav-pills > .active > a,
 .nav-pills > .active > a:hover {
-  background: #7cbb00;
+  background: #29b6d2;
 }
 
 .nav .dropdown-toggle .caret {
-  border-top-color: #7cbb00;
-  border-bottom-color: #7cbb00;
+  border-top-color: #29b6d2;
+  border-bottom-color: #29b6d2;
 }
 
 /* custom progress bar according template skin */
 .progress-orange .bar,
 .progress .bar-orange {
-  background: #7cbb00;
+  background: #29b6d2;
 }
 
 .progress-orange.progress-striped .bar,
 .progress-striped .bar-orange {
-  background: #7cbb00;
+  background: #29b6d2;
 }
 
 /* form */
 .contact-form input:focus {
-  border-color: #7cbb00;
+  border-color: #29b6d2;
 }
 
 /* article */
 article .headline h4 a {
-	color:#7cbb00;
+	color:#29b6d2;
 }
 
 article.last-post {
-	background: #7cbb00;
+	background: #29b6d2;
 }
 
 ul.time-post li.year{
-	border-bottom:1px solid #7cbb00;
+	border-bottom:1px solid #29b6d2;
 }
 
 section#subintro {
-	background: #7cbb00;
+	background: #29b6d2;
 }
 
 
 footer.footer {
-	background:#7cbb00;
+	background:#29b6d2;
 }
 
  /* 404 */
  
 
 .error-body{
-	background:#7cbb00;
+	background:#29b6d2;
 	padding:20px;
 	text-align:center;
 }
@@ -218,19 +218,19 @@ footer.footer {
 
 /* misc */
 a.thumbnail:hover {
-  border-color: #7cbb00;
+  border-color: #29b6d2;
 }
 
 ul.filter li.active a:hover, a.zoom:hover, a.link_post:hover, .flex-control-nav li a:hover, .flex-control-nav li a.active{
-	background: #7cbb00;
+	background: #29b6d2;
 }
 
 .thumbnail h4 a:hover, .thumbnail .meta  span a:hover, ul.recent li h6 a:hover, ul.post-meta li a:hover, .media-body span, .media-body .media-heading a:hover, form label span, article.last-post h5 a:hover{
-	color: #7cbb00;
+	color: #29b6d2;
 	text-decoration:none;
 }
 
 /* nivo */
 .nivo-directionNav a, .nivo-controlNav a.active, .nivo-controlNav a:hover{
-	background-color:#7cbb00;
+	background-color:#29b6d2;
 }
