--- a/src/code/assets/css/overwrite.css
+++ b/src/code/assets/css/overwrite.css
@@ -31,7 +31,7 @@ body {
   font-family: 'Open Sans',"Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   line-height: 1.6em;
-  color: #333333;
+  /* color: #333333; */
   background-color: #ffffff;
 }
 
