--- a/src/code/assets/css/style.css
+++ b/src/code/assets/css/style.css
@@ -612,6 +612,9 @@ ul.filter li.active a{
 .portfolio-home .image-wrapp img{
 	margin:0;
 	padding:0;
+}
+
+.new_image_wrapp{
 	height: 400px;
 }
 
@@ -1790,3 +1793,22 @@ p .book_description{
 	line-height: 120%;
 	text-align: justify;
 }
+
+[type=radio] { 
+	opacity: 0;
+	width: 0;
+	height: 0;
+  }
+  
+  [type=radio] + img {
+	cursor: pointer;
+  }
+  
+  [type=radio]:checked + img {
+	outline: 2px solid #29b6d2;
+  }
+
+  .img_avatar{
+	height: 10%;
+	width: 10%;
+  }
